# LearnNote

./: CMakeLists.txt  README.md
algorithm/: 14.最长公共前缀.cpp  2.两数相加.cpp  20.有效的括号.c  3.无重复字符的最长子串.cpp  66.加一.cpp  CMakeLists.txt  algorithm_test.cpp
docs/: algorithm.md  basic.md  bug.md  c.md  cpp.md  env_setup.md  freertos.md  issue.md  issus.md  learn.md  peripheral.md  project.md  secure_boot.md  spi.md  uart.md  unclassic.md  心得.md  编码.md  进制转换.md  配置文件.md
docs/bluetooth/: ble.md  bluetooth.md  lmp.md  resume.md  蓝牙兼容性.md
docs/system/: freertos.md  linux.md  memory.md  多线程.md
libs/: CMakeLists.txt
libs/cJSON/: CMakeLists.txt
libs/list/: CMakeLists.txt  list.c
libs/utils_standard_c/: utils.c
script/: config.json  log.py  parse_config.py  serial_tool.py  serial_tool_gui.py
test/: CMakeLists.txt  at_cmd.c  data_struct.cpp  devices_list.c  elog_test.c
